[tool.poetry]
name = "broken_telephone"
version = "0.1.0"
description = ""
authors = ["Immortalin <7126128+Immortalin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.78.0"
scikit-commpy = "^0.6.0"
spacy = "^3.0.5"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.8.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}
transformers = "^4.3.3"
idom = {extras = ["stable"], version = "^0.22.5"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
